# DentalDesk

./: .gitignore  README.md  example.env  pyproject.toml
src/app/: agent.py  main.py  mcp_client.py  whatsapp.py
src/dental_desk/: __init__.py
src/dentaldesk_mcp/: __main__.py  server.py
src/shared/: __init__.py  db.py  logger_config.py  models.py
